[package]
name = "rocket-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15.7"
libsql = "0.2.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.196"
